<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="174dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#2E313131"
        android:text="@string/PlayB"
        app:cornerRadius="50dp"
        app:strokeColor="#21ef80"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLog"
        tools:layout_editor_absoluteX="118dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:text="@string/WelcomePageTitle"
        android:textAlignment="center"
        android:textColor="#FFFDFD"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="174dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#2E313131"
        android:text="@string/Gameinf"
        app:cornerRadius="50dp"
        app:strokeColor="#21ef80"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        tools:layout_editor_absoluteX="118dp" />

    <Button
        android:id="@+id/buttonLog"
        android:layout_width="174dp"
        android:layout_height="60dp"
        android:layout_marginBottom="188dp"
        android:backgroundTint="#2E313131"
        android:text="@string/GameLogs"
        app:cornerRadius="50dp"
        app:strokeColor="#21ef80"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>