<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:foregroundTint="#CECDCD"
    tools:context=".playersSetup">

    <Button
        android:id="@+id/button6"
        android:layout_width="138dp"
        android:layout_height="45dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="84dp"
        android:layout_weight="1"
        android:backgroundTint="#2E313131"
        android:text="Launch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toEndOf="@+id/returnButton"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.314"
        app:strokeColor="#21ef80"
        app:strokeWidth="2dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="311dp"
        android:layout_height="384dp"
        android:background="@drawable/bg2"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:gravity="center"
            android:text="@string/PlayerSettings"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:gravity="center"
            android:text="@string/P1_N"
            android:textColor="#585eff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/player1Name"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:hint="Player 1 Name"
            android:textColor="#FFFFFF"
            android:textColorHint="#585eff" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/P2_N"
            android:textColor="#21ef80"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/player2Name"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:hint="Player 2 Name"
            android:textColor="#FFFFFF"
            android:textColorHint="#21ef80" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:layout_editor_absoluteX="-90dp"
        tools:layout_editor_absoluteY="261dp">

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/returnButton"
        android:layout_width="138dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="84dp"
        android:layout_weight="1"
        android:backgroundTint="#2E313131"
        android:text="Return"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.314"
        app:strokeColor="#21ef80"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>